objects/Quote_to_Campaign__c.object
<CustomObject>
    <description>Object to link Multiple quotations to multiple campaigns.</description>
    <fields>
        <fullName>Batch_Quote_Won_Value__c</fullName>
        <description>R7A - Batch process copies Quotation value from the formula field to this Currency field, which is rolled up and shown in Campaign record</description>
        <label>Batch Quote Won Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes_to_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quotation_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Id ,  
IF(
   ISBLANK(Quote__r.Apttus_Proposal__Proposal_Name__c),
   Quote__r.Name,
   Quote__r.Apttus_Proposal__Proposal_Name__c
)
, &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_status__c</fullName>
        <formula>CASE(Quote__r.RecordType.Name,
&apos;CQP&apos;, IF(
ISBLANK(TEXT(Quote__r.Apttus_Proposal__Approval_Stage__c)),
TEXT(Quote__r.APTS_Quotation_Category__c),
TEXT(Quote__r.Apttus_Proposal__Approval_Stage__c)
),
&apos;LP&apos;, IF(
ISBLANK(TEXT( Quote__r.APTS_Quotation_Closed_Status__c )),
TEXT(Quote__r.Apttus_Proposal__Approval_Stage__c),
TEXT( Quote__r.APTS_Quotation_Closed_Status__c )
),
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Last_Modified_Date__c</fullName>
        <description>R7A - Formula field to capture Quotation last modified date</description>
        <formula>Quote__r.LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Total_Value__c</fullName>
        <formula>Quote__r.Quote_Total_Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quotes to Campaign</relationshipLabel>
        <relationshipName>Quotes_to_Campaign</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quote to Campaign</label>
    <nameField>
        <displayFormat>QTC-{0000}</displayFormat>
        <label>Quotes to Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes to Campaign</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>